name:                snappy
version:             0.1.0.0
synopsis:            python -m SimpleHTTPServer but in Haskell via Snap
-- description:         
homepage:            https://github.com/CodeBlock/snappy
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable snappy
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4 && < 5
                     , bytestring
                     , snap-core >= 0.9 && < 1
                     , snap-server >= 0.9 && < 1
  -- hs-source-dirs:      
  default-language:    Haskell2010
